2009-04-30  Don Porter  <dgp@users.sourceforge.net>

	* win/tkWinPixmap.c (Tk_GetPixmap): [Bug 2080533]: Added patch that
	allows Tk to keep working even when the graphics card is stressed.

2009-04-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tcl.m4, unix/configure (SC_CONFIG_CFLAGS): harden the check
	to add _r to CC on AIX with threads.

2009-04-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4:	Removed -Wno-implicit-int from CFLAGS_WARNING.

2009-04-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:	Restore _TCL guards around tcl.h inclusion to restore
	compat with early 8.4.* releases.  Thanks Stuart Cassoff. [Bug 1723812]

2009-02-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkWindow.c: [Bug 2645457] check for dead windows after
	calling Tk_MakeWindowExist to avoid a crash when mapping dead windows.

2008-02-06  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkImgPhoto.c:		fix leaks discovered with the Mac OS X
	* generic/tkMenu.c:		Instruments.app Leaks tool.
	* macosx/tkMacOSXWm.c:

2009-01-16  Andreas Kupries  <andreask@activestate.com>

	* win/tkWinWm.c (WmAttributesCmd): Fix a single use of
	SetWindowLongPtr which was not properly ifdef'd.

2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkPort.h: remove the ../unix/ header dir as the build
	system already has it, and it confuses builds when used with
	private headers installed.

2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SC_PATH_X):	check for libX11.dylib in addition to
					libX11.so et al.

	* unix/configure: 		autoconf-2.13

2008-08-06  Joe English  <jenglish@users.sourceforge.net>

	* generic/tk.h: Fix for [Bug 2010422]: account for X11 changing
	constant LASTEvent.

2008-06-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXCarbonEvents.c:	fix debug carbon event tracing;
	(InstallStandardApplicationEventHandler):	replace needless use of